CHANGELOG
=========

FreeNono 0.4 - 2012-06-02
-------------------------
 * Rebuild dialog to chose nonogram to play with course view
 * Improved audio subsystem with ogg support
 * Enhanced random nonogram feature with history of all played nonograms
 * Many bug fixes
